fixing fount size on smaller displays

--- a/styles.css
+++ b/styles.css
@@ -560,3 +560,10 @@ footer a:hover {
     text-align: center;
   }
 }
+
+/* Small devices (phones, 600px and down) */
+@media only screen and (max-width: 480px) {
+  .content {
+    font-size: 0.5rem;
+  }
+}
